crates/vouched/tests/ui/vouched/duplicate_validation_markers.stderr
error: len(...) can only be specified once
 --> tests/ui/vouched/duplicate_validation_markers.rs:4:1
  |
4 | #[vouched(len(1..), len(..=10))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: range(...) can only be specified once
 --> tests/ui/vouched/duplicate_validation_markers.rs:8:1
  |
8 | #[vouched(range(0..), range(..=10))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: chars(...) can only be specified once
  --> tests/ui/vouched/duplicate_validation_markers.rs:12:1
   |
12 | #[vouched(chars('a'..='z'), chars('0'..='9'))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
